# robo-monad

./: .gitignore  .stylish-haskell.yaml  LICENSE  README.md  bot-monad.cabal  robo-monad.cabal  stack.yaml
demo/: BulletTester.hs  Crazy.hs  ExampleBot.hs  ExampleLensed.hs  Main.hs  SittingDuck.hs  TestBot.hs  WallHugger.hs
src/: Bot.hs  Core.hs  DrawBot.hs  DrawWorld.hs  Main.hs  Maths.hs  PidController.hs  RoboMonad.hs  Types.hs  World.hs
src/Game/: Robo.hs
src/Game/Robo/: Core.hs  Extra.hs  Maths.hs  PID.hs  PIDLensed.hs  PidController.hs  PidUnlensed.hs  Pidable.hs  Render.hs  RenderGLFW.hs  RenderSDL.hs
src/Game/Robo/Core/: Bot.hs  Collision.hs  DrawBot.hs  DrawWorld.hs  Input.hs  Lenses.hs  MathsTypes.hs  Rules.hs  Types.hs  World.hs
src/Game/Robo/Core/Many/: List.hs  Vector.hs
src/Game/Robo/Core/Types/: Maths.hs
src/Game/Robo/Draw/: DrawBot.hs  DrawWorld.hs
src/Game/Robo/PID/: Class.hs  Lensed.hs
src/Game/Robo/Render/: Bot.hs  World.hs
